--- a/pages/home.html
+++ b/pages/home.html
@@ -14,9 +14,9 @@
     <link rel="stylesheet" href="../css/style.css" />
   </head>
 
-  <body>
+  <body id="homePage">
 
-    <nav class="navbar navbar-expand-lg bg-body-tertiary shadow-lg">
+    <nav class="navbar navbar-expand-lg shadow-lg">
       <div class="container-fluid">
           <a class="navbar-brand h1" href="#">Smart Login System</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,7 +24,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <div class="d-block d-lg-flex ms-auto" role="search">
-            <button id="loguotBtn" class="btn btn-outline-warning d-block w-100 mt-3 mt-lg-0">Logout</button>
+            <button id="loguotBtn" class="btn btn-outline-custom d-block w-100 mt-3 mt-lg-0">Logout</button>
           </div>
         </div>
       </div>
@@ -32,9 +32,7 @@
 
     <main class="vh-100 d-flex justify-content-center align-items-center">
 
-      <section id="userData" class="bg-white shadow-lg w-50 text-center py-5">
-        <h1>Hello  <i class="fa-solid fa-face-smile"></i></h1>
-        <p class="h4">Yor email is : </p>
+      <section id="userData" class="shadow-lg w-50 text-center py-5 rounded rounded-3">
       </section>
 
     </main>
